--- a/TripWithMe/res/values/strings.xml
+++ b/TripWithMe/res/values/strings.xml
@@ -15,6 +15,20 @@
     <string name="okBtn">확인</string>
     <string name="samplePhone">+82)010-1234-5678</string>
     <string name="certNo">인증번호</string>
+    
     <string name="title_activity_profile">ProfileActivity</string>
+    <string name="profile_index0">*필수 입력정보 입니다.</string>
+    <string name="profile_index1">프로필 작</string>
+    <string name="profile_index2">정확하게 입력하실수록 선택될 확률이 높습니다!</string>
+    <string name="profile_name">이</string>
+    <string name="profile_sex">성별</string>
+    <string name="profile_nation">국적</string>
+    <string name="profile_language">사용가능 언어</string>
+    <string name="profile_picture">사진선택</string>
+    <string name="profile_index3">(1장에서 최대 5장까지 선택 가능합니다.)</string>
+    <string name="profile_index4">(터치하여 대표 사진을 선택할 수 있습니다.)</string>
+    <string name="profile_toggle0">프로필 작성</string>
+    <string name="profile_toggle1">다음</string>
+    <string name="profile_toggle2">완료</string>
 
 </resources>
