검색바 누르면 나오는 여행객 목록 화면 추가

--- a/TripWithMe/res/values/strings.xml
+++ b/TripWithMe/res/values/strings.xml
@@ -7,17 +7,22 @@
 
     <color name="mainBarBgColor">#41e5b2</color>
 
-    <string name="list_item_01">travler</string>
+    <!-- for main activity spinner items -->
+    <string name="list_item_01">traveler</string>
     <string name="list_item_02">helper</string>
+    
+    <!-- for main activity searchbar -->
     <string name="search_helper">도시, 랜드마크, 키워드로 검색하세요</string>
+    
+    <!-- for login activity -->
     <string name="title_activity_login">LoginActivity</string>
     <string name="resend">재발송</string>
     <string name="okBtn">확인</string>
     <string name="samplePhone">+82)010-1234-5678</string>
     <string name="certNo">인증번호</string>
     
+    <!-- for profile writting -->
     <string name="title_activity_profile">ProfileActivity</string>
-
     <string name="profile_index0">*필수 입력정보 입니다.</string>
     <string name="profile_index1">프로필 작</string>
     <string name="profile_index2">정확하게 입력하실수록 선택될 확률이 높습니다!</string>
@@ -33,8 +38,15 @@
     <string name="profile_layout_btn2">완료</string>
     <string name="profile_textView1_layout0">*작성된 프로필이 없습니다.</string>
     <string name="profile_textView2_layout0">프로필을 작성해야 게시물을 올릴 수 있습니다.</string>
-
     <string name="img_view1">img</string>
-
+	
+	<!-- needed for travelerlist -->
+	<string name="title_activity_TravelerList">TravelerListActivity</string>
+	<string name="listItem_period">1234</string>
+	<string name="listItem_love">1234</string>
+	<string name="listItem_name">a human</string>
+	<string name="listItem_nationality">nationality</string>
+	<string name="listItem_language">language</string>
+	<string name="listItem_attraction">attraction</string>
 
 </resources>
