--- a/TripWithMe/res/values/strings.xml
+++ b/TripWithMe/res/values/strings.xml
@@ -71,4 +71,7 @@
 	<string name="choose_days">날짜를 고르세요</string>
 	<string name="ok">OK</string>
 	<string name="cancel">Cancel</string>
+	
+	<!-- needed for my_profile_activity -->
+	<string name="title_activity_my_profile">title_activity_my_profile</string>
 </resources>
